--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Git test</title>
 </head>
 <body>
     <h3>Hello world</h3>
+    <h2>That man's stink</h2>
 </body>
 </html>
