--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Git test</title>
 </head>
 <body>
-    <h3>Hello world</h3>
+    <h3>Hello world!</h3>
     <h2>That man's stink</h2>
 </body>
 </html>
